# Embed-Robot

./: README.md  example.env  main.py  pyproject.toml
bot/: bot.py  helpers.py
worker/: .gitignore  vercel.json
worker/api/: info.py
